Refactor collect method usage in StreamPractice to utilize toList()