@@ -3,6 +3,7 @@ import java.util.Arrays;
 import java.util.function.BinaryOperator;
 import java.util.function.Function;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class StreamPractice {
@@ -154,7 +155,7 @@ public class StreamPractice {
 //        if we want to convert stream back to collection like List or Set we can use collect method:
         List<Integer> evenList = arr.stream()
                 .filter(n-> n%2==0)
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
         System.out.println("Even numbers collected to List: " + evenList);
 
 //        if we want to use streams with threads it's not suggested to use shared mutable data structures
